# rds-backup

./: README.md  backup.py  pyproject.toml  requirements.in  requirements.txt  setup.py
rds_backup/: backup.py
