[tool.poetry]
name = "rds-backup"
version = "0.2.2"
description = ""
authors = ["Ben Steinberg <bsteinberg@law.harvard.edu>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "rds_backup"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
boto3 = "^1.26.27"
psycopg2 = "^2.9.5"
requests = "^2.31.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[tool.poetry.scripts]
backup = 'rds_backup.backup:backup'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
